# wayland

./: .gitignore  Makefile.am  configure.ac
clients/: Makefile.am  cairo-util.c  dnd.c  flower.c  gears.c  image.c  screenshot.c  smoke.c  terminal.c  view.c  wayland-glib.c  window.c
compositor/: Makefile.am  compositor-drm.c  compositor-wayland.c  compositor-x11.c  compositor.c  drm.c  screenshooter.c  shm.c
m4/: wayland.m4
wayland/: Makefile.am  connection.c  event-loop.c  scanner.c  scanner.mk  wayland-client.c  wayland-hash.c  wayland-server.c  wayland-util.c
